db/1.11/modules/ROOT/pages/database-connector-connection-secure-oracle.adoc
= Configure an Oracle TLS Database Connection

Anypoint Connector for Database (Database Connector) allows you to connect to an Oracle database in a secure way through its dedicated Oracle Connection.

== Secure Oracle Connection levels

.Users can configure the following levels of security:
* TCPS - connection through secure TCP tunnel (not recommended)
* TLS - with Truststore validation only
* mTLS - with Truststore and Keystore validations
* mTLS - without user and password (role is given by certificates)

== Configure a Secure Oracle Connection

Use the *Oracle Connection* field type when you want to connect to an Oracle database securely.

The following example shows how to configure the secure connection in Anypoint Studio:

. In Studio, navigate to the *Global Elements* view.
. Click *Create* to open the *Choose Global Type* view.
. In the *Filter* field, type `database`, select *Database Config* and click *OK*.
. In the *Database Config* window, for the *Connection* field, select **Oracle Connection**.
. Click *Configure* to add the required Oracle JDBC driver and select either: +
+
* *Use local file* +
Install the library using a local file.
* *Add Maven dependency* +
Install a Maven dependency to add to the project.
+
. Set *Host* to `localhost`, *Port* to `1522`, *User* to `system`, *Password* to `oracle`, and *Instance*/*Service Name* to `xe`.
. On the *TLS* tab, specify the TLS Context: +
+
* *Trust Store Configuration* +
Set *Path*, *Password*, and *Type*.
* *Key Store Configuration* +
Set *Path*, *Password*, *Key Password*, and *Type*.
+
. Click *Test Connection* to confirm that Mule can connect to the database.
. Click *OK*.

The following screenshot shows the configuration in Studio:

.Secure Oracle Connection General configuration
image::database-oracle-connection-secure-general.png[Secure Oracle Connection General configuration]
.Secure Oracle Connection TLS configuration
image::database-oracle-connection-secure-tls.png[Secure Oracle Connection TLS configuration]

In the XML editor, the configuration looks like this:

[source,xml,linenums]
----
	<db:config name="oracle-mtls-with-user-pass">
		<db:oracle-connection host="localhost" port="1522" user="system" password="oracle" serviceName="XE">
			<tls:context>
				<tls:trust-store path="<somePath>/client-truststore.jks" password="<somePassword>" type="jks"/>
				<tls:key-store path="<somePath>/client-keystore.jks" password="<somePassword>" keyPassword="<somePassword>" type="jks"/>
			</tls:context>
		</db:oracle-connection>
	</db:config>
----

== Examples on Secure Oracle Connection levels
Next are the xml configs for each Secure Oracle Connection level:

=== TCPS - connection through secure TCP tunnel (not recommended)
In the XML editor, the configuration looks like this:

[source,xml,linenums]
----
	<db:config name="oracle-tcps">
		<db:oracle-connection host="localhost" port="1522" user="system" password="oracle" serviceName="XE" >
			<tls:context>
				<tls:trust-store insecure="true"/>
			</tls:context>
		</db:oracle-connection>
	</db:config>
----

=== TLS - with Truststore validation only
In the XML editor, the configuration looks like this:

[source,xml,linenums]
----
	<db:config name="oracle-tls-with-truststore-only">
		<db:oracle-connection host="localhost" port="1522" user="system" password="oracle" serviceName="XE" >
			<tls:context>
				<tls:trust-store path="<somePath>/client-truststore.jks" password="<somePassword>" type="jks"/>
			</tls:context>
		</db:oracle-connection>
	</db:config>
----

=== mTLS - with Truststore and Keystore validations
In the XML editor, the configuration looks like this:

[source,xml,linenums]
----
	<db:config name="oracle-mtls-with-user-pass">
		<db:oracle-connection host="localhost" user="system" password="oracle" port="1522" serviceName="XE">
			<tls:context>
				<tls:trust-store path="<somePath>/client-truststore.jks" password="<somePassword>" type="jks"/>
				<tls:key-store path="<somePath>/client-keystore.jks" password="<somePassword>" keyPassword="<somePassword>" type="jks"/>
			</tls:context>
		</db:oracle-connection>
	</db:config>
----

=== mTLS - without user and password (role is given by certificates)
In the XML editor, the configuration looks like this:

[source,xml,linenums]
----
	<db:config name="oracle-mtls-with-user-pass">
		<db:oracle-connection host="localhost" port="1522" serviceName="XE">
			<tls:context>
				<tls:trust-store path="<somePath>/client-truststore.jks" password="<somePassword>" type="jks"/>
				<tls:key-store path="<somePath>/client-keystore.jks" password="<somePassword>" keyPassword="<somePassword>" type="jks"/>
			</tls:context>
		</db:oracle-connection>
	</db:config>
----


== See Also

* xref::database-documentation.adoc[Database Connector Reference]
* xref:mule-runtime::tls-configuration.adoc[Configure TLS with Keystores and Truststores]
* https://help.mulesoft.com[MuleSoft Help Center]
